# internal/car/handler.go
@@ -87,8 +87,9 @@ func (h *handler) Register(router *gin.Engine) {
 // @Param brand formData string true "brand"
 // @Param model formData string true "model"
 // @Param price formData float64 true "price"
+// @Param location formData string true "location"
 // @Param is_automatic formData bool true "is_automatic"
-// @Param seats formData int true "seats"
+// @Param seats formData int true "year"
 // @Param year formData int true "year"
 // @Param image formData file true "Image file"
 // @Success 201 {object} car.CreateCarFormDto{}
