# internal/car/model/dtos.go
@@ -7,6 +7,7 @@ type CreateCarFormDto struct {
 	Brand       string  `form:"brand" json:"brand"`
 	Model       string  `form:"model" json:"model"`
 	PricePerDay float64 `form:"price" json:"price"`
+    Location    string  `form:"location" json:"location"` 
 	Year        int     `form:"year" json:"year"`
     Seats       int     `form:"seats" json:"seats"`
     IsAutomatic bool    `form:"is_automatic" json:"is_automatic"`   
